--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <!-- Heroooooooooooo----------------------------------- -->
 
 <main>
-  <section class="hero">
+  <section class="hero1">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -88,24 +88,8 @@
 
 
 
-  
+
 </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
