--- a/index.html
+++ b/index.html
@@ -76,10 +76,54 @@
 
 
 
+<section class="hero2">
+  <div class="container">
+    <div class="row">
+      <div class="hero2-bg">
+        
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+<section class="hero3">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <img src="assets/images/Illustration 2.png" alt="Hero Image" class="img-fluid">
+      </div>
+      <div class="col-md-6">
+        <h1 class="hero2-h1">Connect to the best VPN servers around the world.</h1>
+        <p class="hero2-p">Choose from thousands of free, unlimited, and encrypted VPN servers, worldwide. We provide a simple, convenient way to access the internet.</p>
+        <div class="get-button">
+             <a href="#" class="btn get-started">Get Started</a>
+             <div class="get-background"></div>
+          </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+ -->
 
 
 
