--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<script src="https://kit.fontawesome.com/9c24ad220f.js" crossorigin="anonymous"></script>
 <title>Title</title>
 </head>
 <body>
@@ -52,7 +54,7 @@
     </nav>
 
 
-<!-- Heroooooooooooo----------------------------------- -->
+<!-- Heroooooooooooo 1----------------------------------- -->
 
 <main>
   <section class="hero1">
@@ -65,7 +67,6 @@
              <a href="#" class="btn get-started">Get Started</a>
              <div class="get-background"></div>
           </div>
-         
         </div>
         <div class="col-md-6">
           <img src="assets/images/Illustration 1.png" alt="Hero Image" class="img-fluid">
@@ -76,15 +77,26 @@
 
 
 
-<section class="hero2">
+<!-- Heroooooooooooo 2----------------------------------- -->
+
+
+
+
+
+
+<div class="hero2">
   <div class="container">
-    <div class="row">
-      <div class="hero2-bg">
-        
-      </div>
+    <div class="hero2-bg">
+      <div class="first">
+        <i class="fa-regular fa-circle-user"></i>
     </div>
   </div>
-</section>
+</div>
+
+
+
+
+
 
 
 
