--- a/index.html
+++ b/index.html
@@ -81,21 +81,31 @@
 
 
 
-
-
-
-<div class="hero2">
-  <div class="container">
-    <div class="hero2-bg">
-      <div class="first">
-        <i class="fa-regular fa-circle-user"></i>
-    </div>
+<div class="container card">
+  <div class="card-content">
+      <div class="card-item">
+          <div class="card-icon">
+              <i class="fas fa-user"></i>
+          </div>
+          <div class="card-title">Users</div>
+          <div class="card-value">90+</div>
+      </div>
+      <div class="card-item">
+          <div class="card-icon">
+              <i class="fas fa-map-marker-alt"></i>
+          </div>
+          <div class="card-title">Locations</div>
+          <div class="card-value">30+</div>
+      </div>
+      <div class="card-item">
+          <div class="card-icon">
+              <i class="fas fa-server"></i>
+          </div>
+          <div class="card-title">Servers</div>
+          <div class="card-value">50+</div>
+      </div>
   </div>
 </div>
-
-
-
-
 
 
 
