--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Nav Bar------------------------------- -->
 <nav class="container navbar navbar-expand-lg navbar-light p-3">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">DBook Inc</a>
+        <a class="navbar-brand" href="#">FreeBie</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -94,7 +94,7 @@
           <div class="card-icon">
               <i class="fas fa-map-marker-alt"></i>
           </div>
-          <div class="card-title">Locations</div>
+          <div class="card-titles">Locations</div>
           <div class="card-value">30+</div>
       </div>
       <div class="card-item">
@@ -116,37 +116,27 @@
 
 
 
+<!-- Heroooooooooooo 3----------------------------------- -->
 
-
-
-
-
-
-
-
-
-
-<!-- 
 <section class="hero3">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
         <img src="assets/images/Illustration 2.png" alt="Hero Image" class="img-fluid">
       </div>
-      <div class="col-md-6">
-        <h1 class="hero2-h1">Connect to the best VPN servers around the world.</h1>
-        <p class="hero2-p">Choose from thousands of free, unlimited, and encrypted VPN servers, worldwide. We provide a simple, convenient way to access the internet.</p>
-        <div class="get-button">
-             <a href="#" class="btn get-started">Get Started</a>
-             <div class="get-background"></div>
-          </div>
+      <div class="col-md-6 txthero3">
+        <h1 class="hero2-h1">We Provide Many <br> Features You Can Use</h1>
+        <p class="hero3-p">You can explore the features that we provide with fun and have their own functions each feature.</p>
+        <div>
+          <span class="hero3spantext"><img src="assets/images/bx_bxs-check-circle.png" alt="">Powerfull online protection.</span> <br>
+          <span class="hero3spantext"><img src="assets/images/bx_bxs-check-circle.png" alt="">Internet without borders.</span> <br>
+          <span class="hero3spantext"><img src="assets/images/bx_bxs-check-circle.png" alt="">Supercharged VPN</span> <br>
+          <span class="hero3spantext"><img src="assets/images/bx_bxs-check-circle.png" alt="">No specific time limits.</span> 
+        </div>
       </div>
     </div>
   </div>
 </section>
-
- -->
-
 
 
 
