--- a/index.html
+++ b/index.html
@@ -145,6 +145,99 @@
 
 
 
+
+
+
+
+
+
+
+
+
+<!-- Heroooooooooooo 4----------------------------------- 
+
+<div class="container mt-5">
+  <div class="row">
+      <div class="col-md-4 mb-4">
+          <div class="card h-100">
+              <div class="card-body text-center">
+                  <img src="https://i.imgur.com/qZq43iO.png" alt="Free Plan Icon" class="mb-3">
+                  <h5 class="card-title">Free Plan</h5>
+                  <ul class="list-group list-group-flush">
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Unlimited Bandwitch</li>
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Encrypted Connection</li>
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> No Traffic Logs</li>
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Works on All Devices</li>
+                  </ul>
+                  <h6 class="card-subtitle mt-4">Free</h6>
+                  <a href="#" class="btn btn-danger mt-2">Select</a>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-4 mb-4">
+          <div class="card h-100">
+              <div class="card-body text-center">
+                  <img src="https://i.imgur.com/qZq43iO.png" alt="Standard Plan Icon" class="mb-3">
+                  <h5 class="card-title">Standard Plan</h5>
+                  <ul class="list-group list-group-flush">
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Unlimited Bandwitch</li>
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Encrypted Connection</li>
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Yes Traffic Logs</li>
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Works on All Devices</li>
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Connect Anyware</li>
+                  </ul>
+                  <h6 class="card-subtitle mt-4">$9 / mo</h6>
+                  <a href="#" class="btn btn-danger mt-2">Select</a>
+              </div>
+          </div>
+      </div>
+      <div class="col-md-4 mb-4">
+          <div class="card h-100">
+              <div class="card-body text-center">
+                  <img src="https://i.imgur.com/qZq43iO.png" alt="Premium Plan Icon" class="mb-3">
+                  <h5 class="card-title">Premium Plan</h5>
+                  <ul class="list-group list-group-flush">
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Unlimited Bandwitch</li>
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Encrypted Connection</li>
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Yes Traffic Logs</li>
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Works on All Devices</li>
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Connect Anyware</li>
+                      <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Get New Features</li>
+                  </ul>
+                  <h6 class="card-subtitle mt-4">$12 / mo</h6>
+                  <a href="#" class="btn btn-danger mt-2">Select</a>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+
+
+
+
+-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </main>
 
 
