--- a/index.html
+++ b/index.html
@@ -149,19 +149,20 @@
 
 
 
+<!-- Heroooooooooooo 4----------------------------------- -->
 
 
-
-
-
-<!-- Heroooooooooooo 4----------------------------------- 
-
+<div class="section">
+  <div class="hero4txt">
+    <h1 class="hero4h">Choose Your Plan</h1>
+    <p class="hero4p">Let's choose the package that is best for you and explore it happily and cheerfully.</p>
+  </div>
 <div class="container mt-5">
   <div class="row">
       <div class="col-md-4 mb-4">
           <div class="card h-100">
               <div class="card-body text-center">
-                  <img src="https://i.imgur.com/qZq43iO.png" alt="Free Plan Icon" class="mb-3">
+                  <img src="assets/images/Free.png" alt="Free Plan Icon" class="mb-3">
                   <h5 class="card-title">Free Plan</h5>
                   <ul class="list-group list-group-flush">
                       <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Unlimited Bandwitch</li>
@@ -177,7 +178,7 @@
       <div class="col-md-4 mb-4">
           <div class="card h-100">
               <div class="card-body text-center">
-                  <img src="https://i.imgur.com/qZq43iO.png" alt="Standard Plan Icon" class="mb-3">
+                  <img src="assets/images/Free.png" alt="Standard Plan Icon" class="mb-3">
                   <h5 class="card-title">Standard Plan</h5>
                   <ul class="list-group list-group-flush">
                       <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Unlimited Bandwitch</li>
@@ -194,7 +195,7 @@
       <div class="col-md-4 mb-4">
           <div class="card h-100">
               <div class="card-body text-center">
-                  <img src="https://i.imgur.com/qZq43iO.png" alt="Premium Plan Icon" class="mb-3">
+                  <img src="assets/images/Free.png" alt="Premium Plan Icon" class="mb-3">
                   <h5 class="card-title">Premium Plan</h5>
                   <ul class="list-group list-group-flush">
                       <li class="list-group-item"><i class="bi bi-check-circle-fill"></i> Unlimited Bandwitch</li>
@@ -211,12 +212,15 @@
       </div>
   </div>
 </div>
+</div>
 
 
 
 
 
--->
+
+
+
 
 
 
