--- a/index.html
+++ b/index.html
@@ -215,11 +215,25 @@
 </div>
 
 
+<!-- Heroooooooooooo 5----------------------------------- -->
 
 
+<section>
+  <div class="hero5txt">
+    <h1 class="hero5h">Huge Global Network of Fast VPN</h1>
+    <p class="hero5p">See LaslesVPN everywhere to make it easier for you when you move locations.</p>
+  </div>
+  <div><img class="world" src="assets/images/world.png" alt=""></div>
 
+  <div class="company">
+    <img class="companies" src="assets/images/netflix.png" alt="">
+    <img class="companies"  src="assets/images/reddit.png" alt="">
+    <img class="companies"  src="assets/images/amazon.png" alt="">
+    <img class="companies"  src="assets/images/discord.png" alt="">
+    <img class="companies"  src="assets/images/spotify.png" alt="">
+  </div>
 
-
+</section>
 
 
 
