--- a/index.html
+++ b/index.html
@@ -109,13 +109,6 @@
 
 
 
-
-
-
-
-
-
-
 <!-- Heroooooooooooo 3----------------------------------- -->
 
 <section class="hero3">
@@ -137,15 +130,6 @@
     </div>
   </div>
 </section>
-
-
-
-
-
-
-
-
-
 
 
 
@@ -224,7 +208,6 @@
     <p class="hero5p">See LaslesVPN everywhere to make it easier for you when you move locations.</p>
   </div>
   <div><img class="world" src="assets/images/world.png" alt=""></div>
-
   <div class="company">
     <img class="companies" src="assets/images/netflix.png" alt="">
     <img class="companies"  src="assets/images/reddit.png" alt="">
@@ -232,21 +215,79 @@
     <img class="companies"  src="assets/images/discord.png" alt="">
     <img class="companies"  src="assets/images/spotify.png" alt="">
   </div>
-
 </section>
 
 
 
 
+<!-- Heroooooooooooo 6----------------------------------- -->
 
-
-
-
-
-
-
-
-
+<section>
+  <div class="herotxt6">
+    <h1 class="hero6h">Trusted by Thousands of Happy Customer</h1>
+    <p class="hero6p">These are the stories of our customers who have joined us with great pleasure when using this crazy feature.</p>
+  </div>
+  <div class="container cards">
+    <div class="row mt-5">
+        <div class="col-md-4">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <div class="d-flex align-items-center mb-3">
+                        <img src="https://picsum.photos/50" class="rounded-circle me-2" alt="Viezh Robert">
+                        <div>
+                            <h5 class="card-title">Viezh Robert</h5>
+                            <p class="card-subtitle mb-2 text-muted">Warsaw, Poland</p>
+                            <span class="text-warning"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i> 4.5</span>
+                        </div>
+                    </div>
+                    <p class="card-text">"Wow... I am very happy to use this VPN, it turned out to be more than my expectations and so far there have been no problems. LaslesVPN always the best".</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <div class="d-flex align-items-center mb-3">
+                        <img src="https://picsum.photos/50" class="rounded-circle me-2" alt="Yessica Christy">
+                        <div>
+                            <h5 class="card-title">Yessica Christy</h5>
+                            <p class="card-subtitle mb-2 text-muted">Shanxi, China</p>
+                            <span class="text-warning"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i> 4.5</span>
+                        </div>
+                    </div>
+                    <p class="card-text">"I like it because I like to travel far and still can connect with high speed".</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <div class="d-flex align-items-center mb-3">
+                        <img src="https://picsum.photos/50" class="rounded-circle me-2" alt="Kim Young Jou">
+                        <div>
+                            <h5 class="card-title">Kim Young Jou</h5>
+                            <p class="card-subtitle mb-2 text-muted">Seoul, South Korea</p>
+                            <span class="text-warning"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i> 4.5</span>
+                        </div>
+                    </div>
+                    <p class="card-text">"This is very unusual for my business that currently requires a virtual private network that has high security".</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-12 text-center">
+            <ul class="pagination">
+                <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+</section>
 
 
 
