--- a/index.html
+++ b/index.html
@@ -295,12 +295,116 @@
 
 
 
+<!-- Heroooooooooooo 7----------------------------------- -->
 
 
+<section class="container card1">
+  <div class="small-bg">
+ <section class="py-5">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-6 text-center text-md-start hero7txt">
+                <h1 class="display-4 mb-4 hero7h">Subscribe Now for Get Special Features!</h1>
+                <p class="lead hero7p">Let's subscribe with us and find the fun.</p>
+            </div>
+            <div class="col-md-2 text-center">
+                <button type="button" class="btn btn-lg btn-danger subscribe ">Subscribe Now</button>
+                <div class="get-background1"></div>
+            </div>
+        </div>
+    </div>
+</section>
+  </div>
+</section>
 </main>
 
 
 
+
+
+<section>
+  <footer class="footer-bg">
+
+
+
+
+
+
+
+
+  </footer>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+   
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <img src="logo.png" alt="LaslesVPN Logo" class="footer-logo">
+          <p>LaslesVPN is a private virtual network that has unique features and has high security.</p>
+          <ul class="social-icons">
+            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          </ul>
+          <p>&copy; 2020 LaslesVPN</p>
+        </div>
+        <div class="col-md-4">
+          <h4>Product</h4>
+          <ul class="footer-links">
+            <li><a href="#">Download</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Locations</a></li>
+            <li><a href="#">Server</a></li>
+            <li><a href="#">Countries</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h4>Engage</h4>
+          <ul class="footer-links">
+            <li><a href="#">LaslesVPN?</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Tutorials</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms of Service</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+  -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
     <script src="script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
