--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Nav Bar------------------------------- -->
 <nav class="container navbar navbar-expand-lg navbar-light p-3">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">FreeBie</a>
+        <a class="navbar-brand" href="#">Lasles Vpn</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,7 +26,7 @@
         <div class=" collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-auto ">
             <li class="nav-item">
-              <a class="nav-link mx-2 active" aria-current="page" href="#">About</a>
+              <a class="nav-link mx-2 " aria-current="page" href="#">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link mx-2" href="#">Features</a>
@@ -217,9 +217,6 @@
   </div>
 </section>
 
-
-
-
 <!-- Heroooooooooooo 6----------------------------------- -->
 
 <section>
@@ -291,10 +288,6 @@
 
 
 
-
-
-
-
 <!-- Heroooooooooooo 7----------------------------------- -->
 
 
@@ -316,94 +309,61 @@
 </section>
   </div>
 </section>
-</main>
 
+<!-- Foooter----------------------------------- -->
 
-
-
-
-<section>
-  <footer class="footer-bg">
-
-
-
-
-
-
-
-  </footer>
-</section>
-
-
-
-
-
-
-
-
-
-
-
-<!-- 
-   
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <img src="logo.png" alt="LaslesVPN Logo" class="footer-logo">
-          <p>LaslesVPN is a private virtual network that has unique features and has high security.</p>
-          <ul class="social-icons">
-            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-          </ul>
-          <p>&copy; 2020 LaslesVPN</p>
+<section class="footer-bg">
+<footer class="">
+  <div class="container">
+    <div class="footer">
+      <div class="footer-content">
+        <div class="footer-col">
+            <img src="assets/images/Logo.png" alt="lasles logo" width="150">
+            <p>LaslesVPN is a private virtual network that <br> has unique features and has high security.</p>
+            <div class="social-links">
+                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+            <p class="text-muted">© 2024 Tahsan Ahmed Rafat</p>
         </div>
-        <div class="col-md-4">
-          <h4>Product</h4>
-          <ul class="footer-links">
-            <li><a href="#">Download</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Locations</a></li>
-            <li><a href="#">Server</a></li>
-            <li><a href="#">Countries</a></li>
-            <li><a href="#">Blog</a></li>
-          </ul>
+        <div class="footer-col">
+            <h3>Product</h3>
+            <ul>
+                <li><a href="#">Download</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Locations</a></li>
+                <li><a href="#">Server</a></li>
+                <li><a href="#">Countries</a></li>
+                <li><a href="#">Blog</a></li>
+            </ul>
         </div>
-        <div class="col-md-4">
-          <h4>Engage</h4>
-          <ul class="footer-links">
-            <li><a href="#">LaslesVPN?</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Tutorials</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms of Service</a></li>
-          </ul>
+        <div class="footer-col">
+            <h3>Engage</h3>
+            <ul>
+                <li><a href="#">LaslesVPN?</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Tutorials</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+            </ul>
         </div>
-      </div>
+        <div class="footer-col">
+            <h3>Earn Money</h3>
+            <ul>
+                <li><a href="#">Affiliate</a></li>
+                <li><a href="#">Become Partner</a></li>
+            </ul>
+        </div>
+    </div>
     </div>
 
-  -->
+  </div>
+</footer>
+</section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</main>
     <script src="script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
